<resources>
    <string name="app_name">APOD Material design</string>
    <string name="enter_a_word">Enter a word</string>
    <string name="use_wikipedia">Use wikipedia for reference.</string>
    <string name="photo_of_the_day">Photo of the day</string>
    <string name="explanation">Explanation</string>
    <string name="settings">Settings</string>
    <string name="themes">Themes</string>
    <string name="dark_theme">Dark theme</string>
    <string name="notes">Notes</string>
    <string name="setting">Setting</string>
    <string name="solar_flare">Solar Flare</string>
    <string name="mars">Mars</string>
    <string name="picture_of_the_day">Picture of the day</string>
    <string name="text">Text</string>
</resources>