<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_themes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/base_margin"
            android:text="@string/themes" />

        <TextView
            android:id="@+id/tv_settings_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/selected_theme"
            android:textColor="?attr/themeColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginBottom="@dimen/base_margin"
            android:text="@string/dark_theme" />

    </LinearLayout>
</ScrollView>